# SpareFinder.org

./: .env  .env.example  .env.render  .env.template  .gitignore  ADMIN_DASHBOARD_IMPLEMENTATION.md  AI_CREW_DATABASE_INTEGRATION.md  AI_CREW_INTEGRATION_GUIDE.md  AI_CREW_SETUP_COMPLETE.md  AUTH_REDIRECT_FIX.md  CORS_FIX_COMPLETE.md  CREW_ANALYSIS_QUICKSTART.md  CREW_ANALYSIS_REALTIME_IMPLEMENTATION.md  CREW_ANALYSIS_UUID_FIX.md  DEPLOYMENT_FIX_COMPLETE.md  EMAIL_NOTIFICATIONS_IMPLEMENTATION.md  EVENT_LOOP_FIX_COMPLETE.md  FRONTEND_SETUP.md  IMAGE_STORAGE_IMPLEMENTATION.md  MIGRATION_COMPLETE.md  QUERY_OPTIMIZATION_SUMMARY.md  QUICKSTART_AI_CREW.md  README-BACKEND-SETUP.md  README.md  SCRAPER_FIXES_SUMMARY.md  SCRAPER_STATUS_UPDATE.md  STATS_IMPLEMENTATION_SUMMARY.md  STORAGE_BUCKET_SETUP_GUIDE.md  TECHNICAL_REPORT.md  URGENT-FIXES-GUIDE.md  WEBSOCKET_TESTING.md  bash.exe.stackdump  check-db-data.cjs  comprehensive-database-fix.sql  create-admin.cjs  create-sample-notifications.sql  create_user_achievements_table.sql  database-crew-analysis-jobs.sql  database-setup.sql  docker-compose.yml  (+29 more)
SpareFinderAI-Service/: .dockerignore  .env.example  .env.template  .gitignore  DATABASE_SETUP.md  DOCKER_DEPLOYMENT.md  Dockerfile  ENHANCED_SUPPLIER_FORMAT.md  LICENSE  MANIFEST.in  README.md  batch_migrate_jobs.py  build.py  database_schema.sql  deploy_with_data.py  final_migrate_job_01_0e359953-59aa-4e06-82bc-64f2f72b4f81.jpeg.sql  final_migrate_job_02_12715ef5-b936-4a12-b86d-8b642813ae94.sql  final_migrate_job_03_13c8320f-1974-43c8-8d92-a20f8979c595.jpeg.sql  final_migrate_job_04_153a235b-be73-4cb7-8da3-a4cd4f9a396b.jpeg.sql  final_migrate_job_05_1ec775aa-bba5-459f-9838-1eb9a3228ed9.jpeg.sql  final_migrate_job_06_2266a670-3b1f-4fd7-a6db-57039d7377be.jpeg.sql  final_migrate_job_07_2b6bf337-4c56-4b07-b671-e1905d62a06c.jpeg.sql  final_migrate_job_08_3af14607-0589-423e-b16f-4d76790565db.png.sql  final_migrate_job_09_3d25877e-b60f-45ec-bfa1-8501033bd757.jpeg.sql  final_migrate_job_10_4412ae49-5ac1-4585-82b0-f8a197313fcb.jpeg.sql  final_migrate_job_11_50d6f0fc-fa03-4d35-90cd-f20a7b16883c.jpeg.sql  final_migrate_job_12_5426a506-ebf4-437e-95a7-292a5229f240.jpeg.sql  final_migrate_job_13_5454bcfa-d912-47ba-ac7a-fdb3828ecbaa.jpeg.sql  final_migrate_job_14_5b2f7d6e-270d-4ff4-bec6-9c1430e1b0d8.sql  final_migrate_job_15_62e0aefe-2e7c-48fb-bf8f-6f4c78a66951.jpeg.sql  final_migrate_job_16_828befa7-39c1-4950-8ca7-9c1b10c3269e.sql  final_migrate_job_17_8a68ef5d-fe53-45b7-af9c-3b3000d35179.sql  final_migrate_job_18_8f4d7347-0edb-4370-9623-2486dd9ab5ca.jpeg.sql  final_migrate_job_19_8f60c4c3-ba17-43ca-8928-9337bd8f0f73.sql  final_migrate_job_20_93056574-7083-499e-a740-5282cf89ff82.sql  final_migrate_job_21_95df82a0-3213-41c1-9f56-e39104b1b8e1.sql  final_migrate_job_22_9cca3faf-5309-4378-b790-c11b1f74b050.jpeg.sql  final_migrate_job_23_c3f093bd-6775-441f-9faa-fb517ce0f5dd.png.sql  (+86 more)
SpareFinderAI-Service/app/: main.py  main_database.py  (+2 more)
(+688 files in other folders)
