[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SpareFinderAI-Service"
version = "1.0.1"
description = "AI-powered automotive part identification service"
requires-python = ">=3.8,<3.13"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy",
    "black",
    "isort"
] 