[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SpareFinderAI-Service"
version = "1.0.1"
description = "AI-powered automotive part identification service"
authors = [
    {name = "SpareFinderAI Team", email = "support@sparefinderai.com"}
]
requires-python = ">=3.8,<3.13"

[project.dependencies]
fastapi = "==0.110.1"
uvicorn = "==0.28.0"
python-multipart = "==0.0.9"
httpx = "==0.27.0"
pydantic = "==2.6.4"
python-dotenv = "==1.0.1"
openai = "==1.14.3"
pillow = "==10.2.0" 