[metadata]
name = SpareFinderAI-Service
version = 1.0.1
description = AI-powered Engineering spares part identification service
long_description = file: README.md
long_description_content_type = text/markdown
author = SpareFinderAI Team
author_email = support@sparefinderai.com
license = MIT
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.8,<3.13
install_requires = 
    fastapi==0.110.1
    uvicorn==0.28.0
    python-multipart==0.0.9
    httpx==0.27.0
    pydantic==2.6.4
    python-dotenv==1.0.1
    openai==1.14.3
    pillow==10.2.0

[options.extras_require]
dev = 
    pytest
    pytest-asyncio
    mypy
    black
    isort

[options.entry_points]
console_scripts = 
    sparefinderai-service = app.main:main

[options.packages.find]
exclude = 
    tests* 